		- Enregistrement de l'historique des joueurs, pour chaque manche jouée
	- ia :
		- Quelques bugs corrigés dans l'API, en particulier le modèle partiel (gros bug sur la fin des explosions)
		- Tous les anciens agents ont été débogués (du moins les bugs d'exécution ont été masqués)
		- Possibilité de découper le code source de l'agent en deux projets (TBB vs. versions des agents)
		- Correction d'un bug dans les anciens agents : ils affichaient certaines exceptions (malgré l'option du jeu)
		- Ajout dans le checker de code source de l'API : ne pas utiliser printStackTrace
		- Test lors du chargement de la table de préférences : combinaisons manquantes
		- Controle de la taille du texte affiché pendant le jeu (préférences)
		- Affichage des chemins en fonction des coordonnées pixels, et non plus seulement cases.
		- Affichage des délais d'attente définis dans les chemins, sous forme de disque placés aux points d'attente.
		- Possibilité de faire des captures de percepts avec CAPSLOCK+numéro de l'agent.
	- options :
		- Possibilité d'enchainer les tournois automatiquement, avec sélection automatique des joueurs
		- Et plusieurs modes sont possibles: aléatoire, pack, classement, confrontations 
		- Menu options modifié en conséquence (maintenant trois modes différents d'enchainement automatique+options)
 	- gui :
 		- Correction d'un bug empêchant l'affichage correct des noms des matches lors des coupes
 		- Correction d'un bug empêchant de changer un joueur quant il y en a déjà 16 (en raison d'un 
 		  blocage provoqué par le choix de la couleur) 
 		- Correction d'un bug lié à l'utilisation de F10 sous Win7
 		- Possibilité de faire des captures d'écran en appuyant sur print screen
 	- niveaux :
 		- C'est maintenant possible de définir des évènements de mort subite dont la position est aléatoire
 	- moteur :
 		- Correction de quelques bugs dans les boucles
 		- Plus de bug graphique quand un sprite passe d'un bord à l'autre 
 	